save file only once for repeated computations

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T07:00:36.535917Z",
-     "start_time": "2023-02-08T07:00:36.491480Z"
+     "end_time": "2023-02-09T13:45:00.258020Z",
+     "start_time": "2023-02-09T13:45:00.232702Z"
     }
    },
    "outputs": [],
@@ -261,7 +261,8 @@
     "                                                 multp=10,\n",
     "                                                 core_num=10,\n",
     "                                                 share_memory={_share_mem_status})\n",
-    "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
+    "if \"{mem_setting}\" == \"high_mem\":\n",
+    "    np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
     "print(\"sklearn MI calculation:\")\n",
     "\n",
@@ -272,7 +273,8 @@
     "                                                        multp=10,\n",
     "                                                        core_num=10,\n",
     "                                                        share_memory={_share_mem_status})\n",
-    "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
+    "if \"{mem_setting}\" == \"high_mem\":\n",
+    "    np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
@@ -283,9 +285,11 @@
     "                                                   multp=10,\n",
     "                                                   core_num=10,\n",
     "                                                   share_memory={_share_mem_status})\n",
-    "np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
+    "if \"{mem_setting}\" == \"high_mem\":\n",
+    "    np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
-    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1])\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
+    "           mem_setting=mem_setting)\n",
     "    elif outcome == \"diagnosis\":\n",
     "        py_2 = r\"\"\"\n",
     "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
@@ -303,7 +307,8 @@
     "                                             multp=10,\n",
     "                                             core_num=10,\n",
     "                                             share_memory={_share_mem_status})\n",
-    "np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
+    "if \"{mem_setting}\" == \"high_mem\":\n",
+    "    np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
@@ -314,9 +319,11 @@
     "                                                   multp=10,\n",
     "                                                   core_num=10,\n",
     "                                                   share_memory={_share_mem_status})\n",
-    "np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
+    "if \"{mem_setting}\" == \"high_mem\":\n",
+    "    np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
-    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1])\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
+    "           mem_setting=mem_setting)\n",
     "\n",
     "    Path(r\"./ABIDE_screening_\" + outcome + \"_\" + mem_setting + \".py\").touch()\n",
     "    py_script = open(\n",
@@ -373,12 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T07:00:40.334711Z",
-     "start_time": "2023-02-08T07:00:37.013543Z"
+     "end_time": "2023-02-09T13:45:04.694290Z",
+     "start_time": "2023-02-09T13:45:00.852867Z"
     }
    },
    "outputs": [],
@@ -654,12 +661,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T07:00:47.879625Z",
-     "start_time": "2023-02-08T07:00:47.807835Z"
+     "end_time": "2023-02-09T13:45:08.272485Z",
+     "start_time": "2023-02-09T13:45:08.178082Z"
     }
    },
    "outputs": [],
@@ -823,12 +830,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T07:00:59.601157Z",
-     "start_time": "2023-02-08T07:00:56.317540Z"
+     "end_time": "2023-02-09T13:45:12.057386Z",
+     "start_time": "2023-02-09T13:45:08.718125Z"
     }
    },
    "outputs": [],
