--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -193,8 +193,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T13:45:00.258020Z",
-     "start_time": "2023-02-09T13:45:00.232702Z"
+     "end_time": "2023-02-09T20:08:41.755594Z",
+     "start_time": "2023-02-09T20:08:41.720892Z"
     }
    },
    "outputs": [],
@@ -245,9 +245,11 @@
     "    if outcome == \"age\":\n",
     "        py_2 = r\"\"\"\n",
     "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
     "\n",
     "np.save(r\"./ABIDE_columns\", _abide_name[1:-3])\n",
-    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "del _abide_name\n",
     "\n",
     "print(\"The outcome is age.\")\n",
     "print(\n",
@@ -264,6 +266,8 @@
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
+    "del mi_output\n",
+    "\n",
     "print(\"sklearn MI calculation:\")\n",
     "\n",
     "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
@@ -276,6 +280,8 @@
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
+    "del skmi_output\n",
+    "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
@@ -287,6 +293,8 @@
     "                                                   share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
+    "\n",
+    "del pearson_output\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
     "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
     "           mem_setting=mem_setting)\n",
@@ -294,6 +302,8 @@
     "        py_2 = r\"\"\"\n",
     "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
     "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "del _abide_name\n",
     "\n",
     "print(\"The outcome is diagnosis.\")\n",
     "print(\n",
@@ -310,6 +320,8 @@
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
     "\n",
+    "del mi_output\n",
+    "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
@@ -321,6 +333,8 @@
     "                                                   share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
+    "\n",
+    "del pearson_output\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
     "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
     "           mem_setting=mem_setting)\n",
@@ -384,8 +398,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T13:45:04.694290Z",
-     "start_time": "2023-02-09T13:45:00.852867Z"
+     "end_time": "2023-02-09T20:08:45.553748Z",
+     "start_time": "2023-02-09T20:08:42.184223Z"
     }
    },
    "outputs": [],
@@ -665,8 +679,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T13:45:08.272485Z",
-     "start_time": "2023-02-09T13:45:08.178082Z"
+     "end_time": "2023-02-09T20:08:50.181374Z",
+     "start_time": "2023-02-09T20:08:50.113070Z"
     }
    },
    "outputs": [],
@@ -834,8 +848,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T13:45:12.057386Z",
-     "start_time": "2023-02-09T13:45:08.718125Z"
+     "end_time": "2023-02-09T20:08:54.139270Z",
+     "start_time": "2023-02-09T20:08:50.779935Z"
     }
    },
    "outputs": [],
