trying to fix an issue with newly-introduced dask engine

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:28.204640Z",
-     "start_time": "2023-02-07T21:44:27.372301Z"
+     "end_time": "2023-02-10T04:36:24.852130Z",
+     "start_time": "2023-02-10T04:36:23.999476Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:28.271224Z",
-     "start_time": "2023-02-07T21:44:28.205855Z"
+     "end_time": "2023-02-10T04:36:24.921249Z",
+     "start_time": "2023-02-10T04:36:24.853253Z"
     }
    },
    "outputs": [],
@@ -229,8 +229,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:28.358494Z",
-     "start_time": "2023-02-07T21:44:28.272812Z"
+     "end_time": "2023-02-10T04:36:25.010240Z",
+     "start_time": "2023-02-10T04:36:24.922920Z"
     }
    },
    "outputs": [],
@@ -516,8 +516,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:28.384072Z",
-     "start_time": "2023-02-07T21:44:28.359575Z"
+     "end_time": "2023-02-10T04:36:25.036765Z",
+     "start_time": "2023-02-10T04:36:25.011412Z"
     }
    },
    "outputs": [],
@@ -614,6 +614,9 @@
     "    if verbose >= 1:\n",
     "        _iter = _tqdm(_iter)\n",
     "    MI_df = _np.array(list(map(_map_foo, _iter)))\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return MI_df\n",
     "\n",
     "\n",
@@ -660,6 +663,9 @@
     "    if verbose >= 1:\n",
     "        _iter = _tqdm(_iter)\n",
     "    MI_df = _np.array(list(map(_map_foo, _iter)))\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return MI_df\n",
     "\n",
     "\n",
@@ -734,6 +740,9 @@
     "    with _mp.Pool(core_num) as pl:\n",
     "        MI_df = pl.map(_binary_screening_csv_slice, _iter)\n",
     "    MI_df = _np.hstack(MI_df)\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return MI_df\n",
     "\n",
     "\n",
@@ -816,6 +825,9 @@
     "    with _mp.Pool(core_num) as pl:\n",
     "        MI_df = pl.map(_continuous_screening_csv_slice, _iter)\n",
     "    MI_df = _np.hstack(MI_df)\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return MI_df\n",
     "\n",
     "\n",
@@ -891,6 +903,9 @@
     "    with _mp.Pool(core_num) as pl:\n",
     "        MI_df = pl.map(_continuous_skMI_df_slice, _iter)\n",
     "    MI_df = _np.hstack(MI_df)\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return MI_df\n",
     "\n",
     "\n",
@@ -967,6 +982,9 @@
     "    with _mp.Pool(core_num) as pl:\n",
     "        Pearson_df = pl.map(_Pearson_screening_df_slice, _iter)\n",
     "    Pearson_df = _np.hstack(Pearson_df)\n",
+    "\n",
+    "    del _df\n",
+    "\n",
     "    return Pearson_df\n",
     "\n",
     "\n",
@@ -1000,6 +1018,9 @@
     "                             parquet_file=parquet_file,\n",
     "                             sample=sample,\n",
     "                             verbose=verbose)\n",
+    "\n",
+    "    del _\n",
+    "\n",
     "    if num_vars_exam == _np.infty:\n",
     "        num_vars_exam = len(keep_cols) - 1\n",
     "    _iter = _np.arange(num_vars_exam)\n",
@@ -1040,8 +1061,8 @@
    "id": "a07043f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:28.443176Z",
-     "start_time": "2023-02-07T21:44:28.385255Z"
+     "end_time": "2023-02-10T04:36:25.100554Z",
+     "start_time": "2023-02-10T04:36:25.037854Z"
     }
    },
    "outputs": [],
@@ -1316,8 +1337,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:42.709347Z",
-     "start_time": "2023-02-07T21:44:28.444254Z"
+     "end_time": "2023-02-10T04:36:40.147257Z",
+     "start_time": "2023-02-10T04:36:25.101572Z"
     }
    },
    "outputs": [
@@ -1325,9 +1346,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0005911751429854453\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0005911751429854453\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.002290627416873637\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0008966975620036587\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0008966975620036587\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0018441648542024823\n",
       "MI estimate between a,a and a,b:  0.11484453582966159 0.0018942218779887813\n"
      ]
     }
@@ -1384,8 +1405,8 @@
    "id": "bca5549d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:48.897262Z",
-     "start_time": "2023-02-07T21:44:42.710970Z"
+     "end_time": "2023-02-10T04:36:46.585529Z",
+     "start_time": "2023-02-10T04:36:40.148443Z"
     }
    },
    "outputs": [
@@ -1402,7 +1423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 32.84it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:05<00:00, 31.76it/s]\n"
      ]
     },
     {
@@ -1454,8 +1475,8 @@
    "id": "f5026fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:51.414638Z",
-     "start_time": "2023-02-07T21:44:48.899302Z"
+     "end_time": "2023-02-10T04:36:49.158471Z",
+     "start_time": "2023-02-10T04:36:46.586817Z"
     }
    },
    "outputs": [
@@ -1519,8 +1540,8 @@
    "id": "d657c60c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:45:03.406826Z",
-     "start_time": "2023-02-07T21:44:51.415742Z"
+     "end_time": "2023-02-10T04:37:00.464901Z",
+     "start_time": "2023-02-10T04:36:49.159896Z"
     }
    },
    "outputs": [
@@ -1528,7 +1549,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:11<00:00,  2.39s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:11<00:00,  2.26s/it]\n"
      ]
     },
     {
@@ -1570,8 +1591,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:45:03.410608Z",
-     "start_time": "2023-02-07T21:45:03.407950Z"
+     "end_time": "2023-02-10T04:37:00.468685Z",
+     "start_time": "2023-02-10T04:37:00.466029Z"
     }
    },
    "outputs": [],
@@ -1647,8 +1668,8 @@
    "id": "48e4c7d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:45:29.246897Z",
-     "start_time": "2023-02-07T21:45:03.411586Z"
+     "end_time": "2023-02-10T04:37:27.224245Z",
+     "start_time": "2023-02-10T04:37:00.469779Z"
     }
    },
    "outputs": [
@@ -1656,7 +1677,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 2004/2004 [00:25<00:00, 78.87it/s]\n"
+      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 76.25it/s]\n"
      ]
     },
     {
@@ -1685,8 +1706,8 @@
    "id": "d637d850",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:45:59.008643Z",
-     "start_time": "2023-02-07T21:45:29.249739Z"
+     "end_time": "2023-02-10T04:37:57.409485Z",
+     "start_time": "2023-02-10T04:37:27.226699Z"
     }
    },
    "outputs": [
@@ -1694,7 +1715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:09<00:00, 16.82it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:09<00:00, 16.40it/s]\n"
      ]
     },
     {
@@ -1711,7 +1732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 19.13it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 18.70it/s]\n"
      ]
     },
     {
@@ -1728,7 +1749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 18.92it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 18.85it/s]\n"
      ]
     },
     {
@@ -1767,8 +1788,8 @@
    "id": "d19ddd1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:46:04.894802Z",
-     "start_time": "2023-02-07T21:45:59.009600Z"
+     "end_time": "2023-02-10T04:38:03.186457Z",
+     "start_time": "2023-02-10T04:37:57.410801Z"
     }
    },
    "outputs": [
@@ -1776,7 +1797,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 366.34it/s]\n"
+      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 375.88it/s]\n"
      ]
     },
     {
@@ -1812,8 +1833,8 @@
    "id": "4b51a385",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:46:14.084713Z",
-     "start_time": "2023-02-07T21:46:04.895889Z"
+     "end_time": "2023-02-10T04:38:12.240594Z",
+     "start_time": "2023-02-10T04:38:03.187451Z"
     }
    },
    "outputs": [
@@ -1821,7 +1842,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 19.17it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:08<00:00, 19.63it/s]\n"
      ]
     },
     {
@@ -1850,8 +1871,8 @@
    "id": "0c9dda67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:47:04.678408Z",
-     "start_time": "2023-02-07T21:46:14.085857Z"
+     "end_time": "2023-02-10T04:39:03.247521Z",
+     "start_time": "2023-02-10T04:38:12.242126Z"
     }
    },
    "outputs": [
@@ -1859,7 +1880,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:50<00:00, 10.09s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:50<00:00, 10.18s/it]\n"
      ]
     },
     {
@@ -1895,8 +1916,8 @@
    "id": "174c8ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:47:11.725948Z",
-     "start_time": "2023-02-07T21:47:04.679440Z"
+     "end_time": "2023-02-10T04:39:10.050324Z",
+     "start_time": "2023-02-10T04:39:03.248722Z"
     }
    },
    "outputs": [
@@ -1904,7 +1925,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.61it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 35.91it/s]\n"
      ]
     },
     {
@@ -1921,7 +1942,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 147.83it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 157.73it/s]\n"
      ]
     },
     {
