--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -189,12 +189,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1221a072",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T04:46:25.294329Z",
-     "start_time": "2023-02-10T04:46:25.258026Z"
+     "end_time": "2023-02-10T22:08:46.142691Z",
+     "start_time": "2023-02-10T22:08:46.106681Z"
     }
    },
    "outputs": [],
@@ -253,16 +261,18 @@
     "\n",
     "print(\"The outcome is age.\")\n",
     "print(\n",
-    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\")\n",
+    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\"\n",
+    ")\n",
     "print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
-    "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
-    "                                                 _usecols=abide_name,\n",
-    "                                                 csv_engine=\"{_csv_engine}\",\n",
-    "                                                 sample=1250000,\n",
-    "                                                 multp=10,\n",
-    "                                                 core_num=10,\n",
-    "                                                 share_memory={_share_mem_status})\n",
+    "mi_output = mi.continuous_screening_csv_parallel(\n",
+    "    csv_file,\n",
+    "    _usecols=abide_name.copy(),\n",
+    "    csv_engine=\"{_csv_engine}\",\n",
+    "    sample=1250000,\n",
+    "    multp=10,\n",
+    "    core_num=10,\n",
+    "    share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
@@ -270,13 +280,14 @@
     "\n",
     "print(\"sklearn MI calculation:\")\n",
     "\n",
-    "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
-    "                                                        _usecols=abide_name,\n",
-    "                                                        csv_engine=\"{_csv_engine}\",\n",
-    "                                                        sample=1250000,\n",
-    "                                                        multp=10,\n",
-    "                                                        core_num=10,\n",
-    "                                                        share_memory={_share_mem_status})\n",
+    "skmi_output = mi.continuous_skMI_screening_csv_parallel(\n",
+    "    csv_file,\n",
+    "    _usecols=abide_name.copy(),\n",
+    "    csv_engine=\"{_csv_engine}\",\n",
+    "    sample=1250000,\n",
+    "    multp=10,\n",
+    "    core_num=10,\n",
+    "    share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
@@ -284,13 +295,14 @@
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
-    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
-    "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine=\"{_csv_engine}\",\n",
-    "                                                   sample=1250000,\n",
-    "                                                   multp=10,\n",
-    "                                                   core_num=10,\n",
-    "                                                   share_memory={_share_mem_status})\n",
+    "pearson_output = mi.Pearson_screening_csv_parallel(\n",
+    "    csv_file,\n",
+    "    _usecols=abide_name.copy(),\n",
+    "    csv_engine=\"{_csv_engine}\",\n",
+    "    sample=1250000,\n",
+    "    multp=10,\n",
+    "    core_num=10,\n",
+    "    share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
     "\n",
@@ -307,11 +319,12 @@
     "\n",
     "print(\"The outcome is diagnosis.\")\n",
     "print(\n",
-    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\")\n",
+    "    \"Now running using {_csv_engine} CSV engine with share_memory={_share_mem_status}.\"\n",
+    ")\n",
     "print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
     "mi_output = mi.binary_screening_csv_parallel(csv_file,\n",
-    "                                             _usecols=abide_name,\n",
+    "                                             _usecols=abide_name.copy(),\n",
     "                                             csv_engine=\"{_csv_engine}\",\n",
     "                                             sample=1250000,\n",
     "                                             multp=10,\n",
@@ -324,13 +337,14 @@
     "\n",
     "print(\"Pearson's correlation calculation:\")\n",
     "\n",
-    "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
-    "                                                   _usecols=abide_name,\n",
-    "                                                   csv_engine=\"{_csv_engine}\",\n",
-    "                                                   sample=1250000,\n",
-    "                                                   multp=10,\n",
-    "                                                   core_num=10,\n",
-    "                                                   share_memory={_share_mem_status})\n",
+    "pearson_output = mi.Pearson_screening_csv_parallel(\n",
+    "    csv_file,\n",
+    "    _usecols=abide_name.copy(),\n",
+    "    csv_engine=\"{_csv_engine}\",\n",
+    "    sample=1250000,\n",
+    "    multp=10,\n",
+    "    core_num=10,\n",
+    "    share_memory={_share_mem_status})\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
     "\n",
@@ -398,8 +412,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T04:46:29.490433Z",
-     "start_time": "2023-02-10T04:46:25.752875Z"
+     "end_time": "2023-02-10T22:08:50.736479Z",
+     "start_time": "2023-02-10T22:08:46.594130Z"
     }
    },
    "outputs": [],
@@ -679,8 +693,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T04:46:30.517056Z",
-     "start_time": "2023-02-10T04:46:30.484319Z"
+     "end_time": "2023-02-10T22:08:59.015533Z",
+     "start_time": "2023-02-10T22:08:58.938926Z"
     }
    },
    "outputs": [],
@@ -733,6 +747,9 @@
     "nvidia-smi\n",
     "lscpu\n",
     "\n",
+    "cp /home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv $SLURM_TMPDIR/\n",
+    "cp ../*.npy $SLURM_TMPDIR/\n",
+    "\n",
     "python3 ABIDE_age_{dep_measure}_{fun_name}.py\n",
     "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
     "    py_script.write(r\"\"\"import numpy as np\n",
@@ -753,11 +770,14 @@
     "from tqdm import tqdm as tqdm\n",
     "import os\n",
     "\n",
-    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
-    "columns = np.load(r\"../ABIDE_columns.npy\")\n",
-    "abide_dep = np.load(r\"../ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
     "\n",
+    "\n",
+    "columns = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"../ABIDE_columns.npy\")\n",
+    "abide_dep = np.load(os.environ[\"SLURM_TMPDIR\"] +\n",
+    "                    r\"../ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
     "\n",
     "\n",
     "def testing_error(num_covariates=20,\n",
@@ -826,12 +846,13 @@
     "output = testing_error_num_attr(\n",
     "    num_attr=list(\n",
     "        map(int,\n",
-    "            np.around(np.linspace(0, len(columns),50 + 1)[1:]).tolist())),\n",
+    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())),\n",
     "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
     "    fun={fun_name},  # fun_name\n",
     "    outcome_name=\"AGE_AT_SCAN\",\n",
     "    num_rep=10)\n",
-    "np.save(r\"./ABIDE_age_{dep_measure}_{fun_name}\", output)  # dep_measure, fun_name\n",
+    "np.save(r\"./ABIDE_age_{dep_measure}_{fun_name}\",\n",
+    "        output)  # dep_measure, fun_name\n",
     "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
     "\n",
     "\n",
@@ -848,8 +869,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-10T04:46:34.239336Z",
-     "start_time": "2023-02-10T04:46:30.835038Z"
+     "end_time": "2023-02-10T22:09:03.281901Z",
+     "start_time": "2023-02-10T22:08:59.936682Z"
     }
    },
    "outputs": [],
@@ -952,7 +973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
